--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,11 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-python@v1
       with:
-        python-version: '3.6'
+        python-version: '3.8.2'
         architecture: 'x64'
     - name: Install the library
       run: |
+        make linux
         make build
     - name: Run tests
       run: |
