--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           python-version: '3.8.8'
       - name: Install dependencies
-        run: make install
+        run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
 
