--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,16 @@ name: CI
 on: [push, pull_request]
 
 jobs:
-  my_python_job:
+  run_python_tests:
     name: "Python"
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python: [3.8.8]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8.8'
-      - name: Install dependencies
+      - name: Install Dependencies
         run: pip install -r requirements.txt
       - name: Run tests
         run: pytest
